Fixed bug where backdrop was too wide, causing horizontal scrollbar

--- a/site/styles.css
+++ b/site/styles.css
@@ -45,6 +45,10 @@ footer {
   overflow: hidden;
 }
 
+#backdrop {
+  max-width: 100%;
+}
+
 .backdrop-wrapper {
   width: 100vw;
   height: 50vh;
@@ -562,6 +566,7 @@ margin: 12px 0 0 0;
   .backdrop-wrapper {
     height: 280px;
     width: 100vw;
+    max-width: 100%;
     position: absolute;
     top: 0px;
     left: 0px;
